# e-voice

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.prod.yml  compose.yml  pyproject.toml  qwen3ttsimpl.md
.claude/: settings.json
.github/workflows/: ci.yml
data/config/: config.yaml
data/models/tts/qwen/voices/: aiden_en.pt  dylan_en.pt  eric_en.pt  ono_anna_ja.pt  ryan_en.pt  serena_en.pt  sohee_ko.pt  tatan_es.pt  uncle_fu_zh.pt  vivian_zh.pt
docker/: entrypoint.sh  nginx.conf
src/e_voice/: front.py  main.py
src/e_voice/adapters/: api_client.py  base.py  kokoro.py  registry.py  whisper.py
src/e_voice/adapters/stt/: whisper.py
src/e_voice/adapters/tts/: kokoro.py  qwen.py
src/e_voice/api/: health.py  stt.py  system.py  tts.py
src/e_voice/core/: audio.py  helpers.py  lifespan.py  logger.py  router.py  settings.py  websocket.py
src/e_voice/events/: adapters.py  kokoro_model.py  monitor.py  process_pool.py  whisper_model.py
src/e_voice/middlewares/: base.py  files.py  swagger.py
src/e_voice/models/: error.py  session.py  stt.py  system.py  transcription.py  tts.py  ws.py
src/e_voice/operational/: controller.py  monitor.py
src/e_voice/streaming/: audio.py  text.py  transcriber.py  vad.py
src/e_voice/streaming/stt/: audio.py  transcriber.py
src/e_voice/styles/: front.css
src/e_voice/websockets/: stt.py  tts.py
tests/integration/: conftest.py
tests/integration/e_voice/: conftest.py  test_concurrency.py  test_load.py  test_taxonomical_endpoints.py
tests/integration/e_voice/api/: conftest.py  test_health.py  test_models.py  test_stt_http.py  test_stt_sse.py  test_tts_http.py  test_tts_sse.py  test_tts_stream.py
tests/integration/e_voice/sdk/: conftest.py  test_openai_models.py  test_openai_stt.py  test_openai_tts.py
tests/integration/e_voice/websockets/: test_stt.py  test_tts.py
tests/unit/: conftest.py
tests/unit/e_voice/adapters/: conftest.py  test_base.py  test_kokoro.py  test_registry.py  test_whisper.py
tests/unit/e_voice/adapters/stt/: test_whisper.py
tests/unit/e_voice/adapters/tts/: test_kokoro.py  test_qwen.py
tests/unit/e_voice/core/: test_audio.py  test_helpers.py  test_lifespan.py  test_router.py  test_settings.py  test_transport_policies.py  test_websocket.py
tests/unit/e_voice/events/: test_process_pool.py
tests/unit/e_voice/models/: test_core.py  test_error.py  test_session.py  test_system.py  test_transcription.py  test_tts.py  test_tts_voice_entry.py  test_ws.py
tests/unit/e_voice/operational/: test_controller.py  test_monitor.py
tests/unit/e_voice/streaming/: conftest.py  test_audio.py  test_text.py  test_transcriber.py  test_vad.py
tests/unit/e_voice/streaming/stt/: conftest.py  test_audio.py  test_text.py  test_transcriber.py  test_vad.py
tests/unit/e_voice/websockets/: conftest.py  test_stt.py
