[build-system]
requires = ["hatchling>=1.24", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[project]
name = "e-voice"
dynamic = ["version"]
description = "Lightweight speech-to-text API powered by Robyn and faster-whisper"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "your@email.com" }]
keywords = ["robyn", "whisper", "stt", "speech-to-text", "faster-whisper", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "robyn>=0.72.0",
    "pydantic>=2.11.0",
    "pydantic-settings[yaml]>=2.10.0",
    "orjson>=3.10.0",
    "structlog>=25.0.0",
    "beartype>=0.21.0",
    "gitpython>=3.1.45",
    # Speech-to-Text
    "faster-whisper>=1.1.0",
    "numpy>=2.0.0",
    "soundfile>=0.13.0",
    "scipy>=1.15.0",
    "huggingface-hub>=0.30.0",
    # Text-to-Speech
    "kokoro-onnx>=0.5.0",
    "av>=14.0.0",
    # HTTP client
    "httpx>=0.28.0",
    "httpx-sse>=0.4.0",
    "httpx-ws>=0.7.0",
    "gradio>=6.9.0",
]

[project.scripts]
e-voice = "e_voice.main:main"

[project.urls]
Documentation = "https://github.com/yourusername/robyn-ml-api#readme"
Repository = "https://github.com/yourusername/robyn-ml-api"
Issues = "https://github.com/yourusername/robyn-ml-api/issues"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.5.0",
    "pytest-rerunfailures>=15.0",
    "pytest-httpserver>=1.1.5",
    "pytest-audioeval>=0.1.2",
    "ruff>=0.14.0",
    "ty>=0.0.5",
    "pre-commit>=4.4.0",
    "respx>=0.22.0",
    "polyfactory>=3.3.0",
    "fakeredis>=2.28.0",
    "openai>=2.28.0",
    "debugpy>=1.8.20",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/e_voice"]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.default.scripts]
dev = "python -m e_voice.main"
lint = "ruff check --fix ."
format = "ruff format ."
typecheck = "ty check"
test = "python -m pytest tests/unit -v -m 'not slow' --cov --cov-report=term-missing"
test-integration = "python -m pytest tests/integration -v -m slow"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["e_voice"]

[tool.ty.environment]
python-version = "3.12"
root = ["./src/e_voice"]

[tool.ty.rules]
possibly-unresolved-reference = "error"
unresolved-import = "error"

[tool.coverage.run]
source = ["e_voice"]
branch = true
omit = [
    "src/e_voice/main.py",
    "src/e_voice/api/*",
    "src/e_voice/websockets/*",
    "src/e_voice/middlewares/*",
    "src/e_voice/core/router.py",
    "src/e_voice/events/*",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "@overload",
]
